--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-spring.application.name=backend
+spring.application.name=VetSecure
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/VetSecure
+spring.datasource.username=root
+spring.datasource.password=9404
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
